# nytd-cpp-class-student-score

./: CMakeLists.txt  README.md
include/: Admin.h  CSV.h  ScoreManagementSystem.h  Student.h  StudentList.h  Teacher.h  TeacherList.h  getopt.h  main.h
src/: Admin.cpp  CSV.cpp  ScoreManagementSystem.cpp  Student.cpp  StudentList.cpp  Teacher.cpp  TeacherList.cpp  getopt.c  main.cpp
test/: students.csv  teachers.csv
